# VLDP

./: .dockerignore  .gitattributes  .gitignore  ARTIFACT_EVALUATION.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  memo.md  requirements.txt
benches/random_single_run_histogram/: base_protocol.rs  expand_protocol.rs  shuffle_protocol.rs
benches/random_single_run_real/: base_protocol.rs  expand_protocol.rs  shuffle_protocol.rs
examples/geo_data/: base_protocol.rs  expand_protocol.rs  shuffle_protocol.rs
examples/smart_meter_data/: base_protocol.rs  expand_protocol.rs  shuffle_protocol.rs
resources/shuffle-model-parameters/: LDP-Shuffle-Parameters.ipynb  energy_data.csv  geolife-postcodes-condensed-empties.csv
scripts/: make_plots.py  parse_additional_bench_results.py  parse_bench_results.py  parse_geo_data_results.py  parse_smart_meter_results.py
scripts/linux/: run_additional_benches  run_additional_benches_fast  run_all  run_all_fast  run_benches  run_benches_fast  run_geo_data_examples  run_smart_meter_examples
scripts/linux/results/raw/benches/: 2025-06-13--01-02-45_bench_base_histogram.txt  2025-06-13--01-02-45_bench_expand_histogram.txt  2025-06-13--01-13-34_bench_expand_real.txt  2025-06-13--01-15-32_bench_shuffle_real.txt  2025-06-13--01-17-15_bench_base_histogram.txt  2025-06-13--01-17-15_bench_base_real.txt  2025-06-13--01-17-15_bench_shuffle_histogram.txt  2025-06-19--09-14-41_bench_base_histogram.txt  2025-06-19--09-15-05_bench_base_histogram.txt  2025-06-19--09-15-05_bench_shuffle_histogram.txt  2025-06-19--09-35-52_bench_expand_histogram.txt  2025-06-19--09-35-52_bench_expand_real.txt  (+3 more)
scripts/windows/: run_additional_benches.cmd  run_additional_benches_fast.cmd  run_all.cmd  run_all_fast.cmd  run_benches.cmd  run_benches_fast.cmd  run_geo_data_examples.cmd  run_smart_meter_examples.cmd
src/: error.rs  lib.rs  prelude.rs
src/circuits/: base.rs  expand.rs  mod.rs  shuffle.rs
src/client/: base.rs  expand.rs  mod.rs  shuffle.rs
src/config/: basic_config.rs  merkle_tree.rs  mod.rs  proof_system.rs  windows.rs
src/messages/: base.rs  expand.rs  mod.rs  shuffle.rs
src/primitives/: mod.rs
src/primitives/crh/: mod.rs
src/primitives/crh/blake2s/: constraints.rs  mod.rs
src/primitives/crh/identity/: constraints.rs  mod.rs
src/primitives/parameters/: constraints.rs  mod.rs
src/primitives/parameters/base/: constraints.rs  mod.rs
src/primitives/parameters/expand/: constraints.rs  mod.rs
src/primitives/parameters/shuffle/: constraints.rs  mod.rs
src/primitives/signature/: constraints.rs  mod.rs
src/primitives/signature/schnorr/: constraints.rs  mod.rs
src/run_random/: mod.rs  run_protocol_base.rs  run_protocol_expand.rs  run_protocol_shuffle.rs
src/server/: base.rs  expand.rs  mod.rs  shuffle.rs
(+21 files in other folders)
